# mordred

docker/: Dockerfile  docker-compose.yml  stage
docker/conf/: projects.json  requirements.cfg  setup.cfg
