[general]
short_name = Inocybe
update = true
debug = true
logs_dir = /home/bitergia/logs

[projects]
projects_file = /home/bitergia/conf/projects.json

[es_collection]
url = http://elasticsearch:9200

[es_enrichment]
url = http://elasticsearch:9200
# Refresh identities and projects for all items after enrichment
autorefresh = false
studies = true

[sortinghat]
host = mariadb
user = root
password =
database = "Enter Database name"
load_orgs = true
orgs_file = /home/bitergia/conf/orgs_file.json
#matching  see: sortinghat unify --help
matching = [email-name, name]
autoprofile = [gerrit]
sleep_for = 120
bots_names = [bot]
unaffiliated_group = Unknown

[panels]
kibiter_time_from="now-90d"
kibiter_default_index="gerrit"

[phases]
collection = true
identities = true
enrichment = true
panels = true

[gerrit]
raw_index = gerrit_raw
enriched_index = gerrit
user = "Enter gerrit username"
